fixed overflow issue at title

--- a/app.css
+++ b/app.css
@@ -48,7 +48,7 @@ font-size: var(--title-size);
 background-color: transparent;
 overflow-wrap: break-word;
 word-wrap: break-word;
-width:0;min-width:100%;/*this forces the title from expanding it's parent and page width when it gets more text content*/
+width:0;min-width:100%;max-height: 67px;/*this forces the title from expanding it's parent and page width when it gets more text content*/
 }
 @keyframes c_blink {
     0% { border-bottom:1px solid rgb(219, 219, 219); }
